--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "chalk": "4.1.2",
+    "console-table-printer": "^2.10.0",
     "node-binance-api": "^0.13.1",
+    "node-telegram-bot-api": "^0.51.0",
     "simple-json-db": "^1.2.3",
-    "technicalindicators": "^3.1.0",
-    "node-telegram-bot-api": "^0.51.0"
-
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.5"
