--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "asciichart": "^1.5.25",
     "axios": "^0.21.1",
+    "brain.js": "^2.0.0-beta.4",
     "chalk": "4.1.2",
     "console-table-printer": "^2.10.0",
+    "fs": "^0.0.1-security",
     "node-binance-api": "^0.13.1",
     "node-telegram-bot-api": "^0.51.0",
     "prompts": "^2.4.2",
